[package]
name = "test-ngrok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ngrok = {version="0.11",features=["hyper"]}
 tokio = { version = "1.23", features = ["full"] }
# tokio-util = { version = "0.7.4", features = ["compat"] }
axum = { version = "0.6", features = ["tokio"] }
 hyper = { version = "0.14", features = ["full"]}
anyhow = "1.0"


serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
base64 = "0.13.1"
# tokio = { version = "1.23.0", features = ["net", "sync", "time", "rt"] }
tracing = "0.1.37"
async-rustls = { version = "0.3.0" }
tokio-util = { version = "0.7.4", features = ["compat"] }
futures = "0.3.25"
# hyper = { version = "0.14.23", features = ["server"], optional = true }
rustls-pemfile = "1.0.1"
async-trait = "0.1.59"
bytes = "1.3.0"
arc-swap = "1.5.1"
tokio-retry = "0.3.0"
awaitdrop = "0.1.1"
parking_lot = "0.12.1"
once_cell = "1.17.1"
hostname = "0.3.1"

